--- a/shard.yml
+++ b/shard.yml
@@ -10,3 +10,6 @@ dependencies:
   spec2:
     github: waterlink/spec2.cr
     version: ~> 0.4.1
+  terminal-notifier:
+    github: marceloboeira/terminal-notifier
+    version: ~> 0.0.3
