chore: Move spec2 to development dependencies

--- a/shard.yml
+++ b/shard.yml
@@ -6,10 +6,11 @@ authors:
 
 license: MIT
 
-dependencies:
+development_dependencies:
   spec2:
     github: waterlink/spec2.cr
     version: ~> 0.4.1
+dependencies:
   terminal-notifier:
     github: marceloboeira/terminal-notifier
     version: ~> 0.0.4
