--- a/shard.yml
+++ b/shard.yml
@@ -12,5 +12,5 @@ development_dependencies:
     version: ~> 0.4.1
 dependencies:
   terminal-notifier:
-    github: marceloboeira/terminal-notifier
+    github: marceloboeira/terminal-notifier.cr
     version: ~> 0.0.4
