--- a/shard.yml
+++ b/shard.yml
@@ -7,6 +7,12 @@ authors:
 license: MIT
 
 development_dependencies:
+  spec2-mocks:
+    github: waterlink/spec2-mocks.cr
+    version: ~> 0.1.0
+  mocks:
+    github: waterlink/mocks.cr
+    version: ~> 0.4.0
   spec2:
     github: waterlink/spec2.cr
     version: ~> 0.4.1
